compiler/tests/fa/errors/default_arg_order.salam
// انتظار: خطا۰۶۴
// زبان: فارسی
تابع بد(الف : صحیح = 1, ب : صحیح) : صحیح:
    بازگشت الف + ب
تمام

تابع اصلی:
    چاپ بد(2, 3)
تمام
